attempt2/bookstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-service
  namespace: bookstack
spec:
  type: ClusterIP
  selector:
    app: bookstack
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
